--- a/_config.yml
+++ b/_config.yml
@@ -1,30 +1,30 @@
-title: Moving # The title of the blog
-author: Your Name # Your name
-email: your-email@domain.com # your email shown in the footer
-url: https://huangyz.name/moving/ # this is your site's root address.
+title: Special Projects in Tiny Computing - Spring 2024 
+author: Purchase College - New Media
+email: lee.tusman@purchase.edu 
+url: https://leetusman.com/tinycomputing_spring2024/ 
 description: > # this means to ignore newlines until "show_excerpts:"
-  A clean and minimalist theme for Jekyll.
-favicon: "./favicon.ico" # set the favicon of the site
-show_excerpts: false # set to true to show excerpts on the homepage
+  Course website for Purchase College NME 4150
+favicon: "./favicon.ico" 
+show_excerpts: false 
 
 # Moving date format
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
 moving:
-  avatar_url: "https://i.loli.net/2019/08/26/JzCLhDWPEybZr2T.jpg" # avatar in about page
-  about_you: a short description about you. # short description about you in about page
+  avatar_url: "https://upload.wikimedia.org/wikipedia/commons/2/2b/%E8%83%BD%E5%8B%A2%E4%BC%8A%E5%8B%A2%E9%9B%84_%E6%B8%A6%E3%81%A8%E8%A8%98%E6%86%B6%E5%B1%95_%E3%82%AF%E3%83%AD%E3%83%BC%E3%82%B8%E3%83%B3%E3%82%B0%E3%82%A4%E3%83%99%E3%83%B3%E3%83%8806_%285334416681%29.jpg" 
+  about_you: Students create custom projects using inexpensive, bank card–sized computers for art installations and works for the public good. Students will conceptualize, design and implement new computer-based devices and participate in critique of contemporary technology and networked devices. In the process, their knowledge of text-based interfaces, free culture, collaboration, circuit building, and the history of creative computing/hacking is deepened.
   date_format: "%b %d" # date format of posts in home page
   back_to: "Home" # In the post page, you have a back button above the title, you can custom the text by yourself.
 
   # generate social links in about page.
   social_links:
     # twitter:
-    github: huangyz0918
+    github: lee2sman
     rss: RSS
     # dribbble:
-    facebook: huangyz0918
+    # facebook: 
     # flickr:
     # instagram:
-    linkedin: yizheng-huang
+    # linkedin: 
     # pinterest:
     # youtube:
     # youtube_channel:
