--- a/_config.yml
+++ b/_config.yml
@@ -46,6 +46,7 @@ moving:
 
 # Build settings
 theme: moving # note, please use huangyz0918/moving if you want to publish to Github Pages.
+remote_theme: huangyz0918/moving
 
 plugins:
   - jekyll-feed
